[gd_scene load_steps=6 format=3 uid="uid://nqel37qsnrju"]

[ext_resource type="Script" path="res://scripts/interface/IntegerComponent.gd" id="1_1iy4f"]
[ext_resource type="Texture2D" uid="uid://bdlb0jdu0u18k" path="res://themes/perpetual/assets/lcd/lcd_start_blank.png" id="2_6qgyc"]
[ext_resource type="Texture2D" uid="uid://dxicl30h0hj5n" path="res://themes/perpetual/assets/lcd/lcd0000.png" id="3_v66if"]
[ext_resource type="Texture2D" uid="uid://ck4bciq1wlkr5" path="res://themes/perpetual/assets/lcd/lcd0001.png" id="4_vxs8d"]
[ext_resource type="Texture2D" uid="uid://bxopjltfx1ivc" path="res://themes/perpetual/assets/lcd/lcdnoreset.png" id="5_pil0s"]

[node name="IntegerInput" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 0
script = ExtResource("1_1iy4f")

[node name="Start" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_6qgyc")

[node name="Digit0" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_v66if")

[node name="Digit1" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("4_vxs8d")

[node name="Digit2" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("4_vxs8d")

[node name="Digit3" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("4_vxs8d")

[node name="End" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("5_pil0s")
